--- a/NavBar.html
+++ b/NavBar.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Example</title>
+  <title>NavBar</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -34,7 +34,7 @@
 			<li><a href="home.html" target="mainFrame" >Home</a></li>
           <li><a href="DailyReport.html" target="mainFrame" >Daily Report</a></li>
           <li><a href="Project.html" target="mainFrame" >Project</a></li>
-		   <li><a href="Personal.html" target="mainFrame" >Personal</a></li>
+		   <li><a href="Personal.html" target="mainFrame">Personnel</a></li>
 		   <li><a href="test.html" target="mainFrame" >Test</a></li>
 			
         
